# sudofun

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  setup.py  sudoku_solver.py
c++/: aux_funcs.h  clue.hpp  countbits.cpp  puzzle.cpp  puzzle.hpp  rando.cpp  utils.cpp
demo/: puzzle_examples.txt  testnb_sudofun.ipynb  testpuzzle_sudofun.txt
scripts/: sudoku_solver.py
src/: benchmark.cpp  clue.cpp  clue.hpp  main.cpp  maps.cpp  maps.hpp  puzzle.cpp  puzzle.hpp  rando.cpp  run.cpp  run.hpp  solver.cpp  solver.hpp  utils.cpp  utils.hpp  window.cpp  window.hpp
src_simple/: clue.cpp  main.cpp  puzzle.cpp  puzzle.hpp  solver.cpp  solver.hpp  utils.cpp  utils.hpp
sudofun/: __init__.py  construct.py  functions.py  sf_make_funcs.py  sf_solve_funcs.py  solve.py
sudofun_py/: __init__.py  solve.py
sudofun_py/demo/: testnb_sudofun.ipynb
sudofun_py/scripts/: sudoku_solver.py
test_files/: champpoint_choosing.ipynb  incompletepuzzle_sudofun.txt  testnb_sudofun.ipynb
test_files/.ipynb_checkpoints/: testnb_sudofun-checkpoint.ipynb
